--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,11 @@
             android:label="@string/title_map_activity"
             >
         </activity>
+        <activity
+            android:name=".Report"
+            android:label="@string/title_report_activity"
+            >
+        </activity>
 
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
